WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305026
REGRESSION (
305166@main
): [ macOS ] http/tests/lazyload/lazy-image-load-in-iframes-scripting-disabled.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=305026
Summary
REGRESSION (305166@main): [ macOS ] http/tests/lazyload/lazy-image-load-in-if...
Karl Rackler
Reported
2026-01-06 18:36:33 PST
Description: http/tests/lazyload/lazy-image-load-in-iframes-scripting-disabled.html This issue can be bisected to <commit> using the command: run-webkit-tests --root --exit-after-n-failures 1 --debug <test> History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Flazyload%2Flazy-image-load-in-iframes-scripting-disabled.html&platform=mac
Test Run:
https://build.webkit.org/#/builders/1701/builds/507
Crash Log: No crash log found for com.apple.WebKit.WebContent.Development:48000. stdout: stderr: ASSERTION FAILED: commandLineAPIHost /Volumes/Data/worker/Apple-Tahoe-Debug-Build/build/Source/WebCore/inspector/CommandLineAPIModule.cpp(66) : virtual JSValue WebCore::CommandLineAPIModule::host(InjectedScriptManager *, JSGlobalObject *) const 1 0x148876ed8 WebCore::CommandLineAPIModule::host(Inspector::InjectedScriptManager*, JSC::JSGlobalObject*) const 2 0x10574789c Inspector::InjectedScriptModule::ensureInjected(Inspector::InjectedScriptManager*, Inspector::InjectedScript const&) 3 0x148876cc8 WebCore::CommandLineAPIModule::injectIfNeeded(Inspector::InjectedScriptManager*, Inspector::InjectedScript const&) 4 0x1489713a8 WebCore::WebInjectedScriptManager::didCreateInjectedScript(Inspector::InjectedScript const&) 5 0x105728954 Inspector::InjectedScriptManager::injectedScriptFor(JSC::JSGlobalObject*)
Attachments
stderr log
(4.65 KB, text/plain)
2026-01-06 21:21 PST
,
Karl Rackler
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-06 18:36:39 PST
<
rdar://problem/167665017
>
EWS
Comment 2
2026-01-06 18:48:23 PST
Test gardening commit
305196@main
(5ae3c807bb48): <
https://commits.webkit.org/305196@main
> Reviewed commits have been landed. Closing PR #56180 and removing active labels.
Karl Rackler
Comment 3
2026-01-06 21:21:18 PST
Created
attachment 477924
[details]
stderr log
EWS
Comment 4
2026-01-07 12:41:57 PST
Test gardening commit
305230@main
(226d59d3f2d5): <
https://commits.webkit.org/305230@main
> Reviewed commits have been landed. Closing PR #56211 and removing active labels.
Karl Rackler
Comment 5
2026-01-07 12:53:46 PST
This issue can be reproduced using command: run-webkit-tests --no-build --no-retry --no-show-results --exit-after-n-failures=1 --expect-pass --iterations=1000 --force -f --clobber-old-results --run-singly --release http/tests/lazyload/lazy-image-load-in-iframes-scripting-disabled.html
Qianlang Chen
Comment 6
2026-01-07 14:29:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56208
Qianlang Chen
Comment 7
2026-01-08 12:45:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56277
EWS
Comment 8
2026-01-13 14:12:26 PST
Committed
305538@main
(c733fa58e121): <
https://commits.webkit.org/305538@main
> Reviewed commits have been landed. Closing PR #56208 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug