Cherry-pick c733fa58e121. rdar://168110909

REGRESSION (305166@main): [ macOS ] http/tests/lazyload/lazy-image-load-in-iframes-scripting-disabled.html is a flaky crash
    https://bugs.webkit.org/show_bug.cgi?id=305026
    rdar://167665017

    Reviewed by BJ Burg.

    * Source/WebCore/inspector/FrameInspectorController.cpp:
    (WebCore::FrameInspectorController::connectFrontend):
    (WebCore::FrameInspectorController::disconnectFrontend):
       When connecting and disconnecting the frame inspector target with the
       inspector, we should follow the existing order of operation in
       PageInspectorController::(dis)connectFrontend, to ensure the
       InjectedScriptManager is in the set up state while the agents are
       handling frontend created or destroyed events.

    * LayoutTests/platform/mac-wk2/TestExpectations:
       The lazy-image-load-in-iframes-scripting-disabled test should
       progress.

    Canonical link: https://commits.webkit.org/305538@main

Identifier: 305413.19@safari-7624-branch